--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_OrderReviewData.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_OrderReviewData.cshtml
@@ -170,7 +170,7 @@
 		@if (address.CompanyEnabled && address.Company.HasValue())
 		{
 			<div class="company">
-				@Model.BillingAddress.Company
+				@address.Company
 			</div>
 		}
 		<div class="name">
