--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -23,6 +23,7 @@
 @import 'shared/_mixins.scss'; 
 @import 'shared/_typo.scss';
 @import 'shared/_buttons.scss';
+@import 'shared/_cards.scss';
 @import 'shared/_forms.scss';
 @import 'shared/_nav.scss';
 @import "shared/_modal-flex.scss"; 
@@ -43,6 +44,7 @@
 
 // Main
 
+@import "_layout.scss";
 @import "_shopbar.scss";
 @import "_search.scss";
 @import "_footer.scss";
@@ -73,65 +75,9 @@
 @import '~/.app/moduleimports.scss'; 
 
 
-
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body { 
-    background: $site-bg; 
-}
-
 //
 // TODO: (mc) Move all later (!)
 // ------------------------------------------------------
-
-header {
-    background-color: $header-bg;
-}
-
-#page {
-    overflow-x: hidden;  
-}
-
-#content-wrapper {
-    min-height: 600px;
-}
-
-.page-main {
-    position: relative;
-    z-index: 1;
-    background: $body-bg;
-    box-shadow: 0 0 24px rgba(#000, 0.2);
-}
-
-
-.boxed {
-    .page-main {
-        margin-left: auto;
-        margin-right: auto;
-        @include make-container-max-widths();
-    }
-
-    .page-main .container {
-        padding-left: $grid-gutter-width-base / 2;
-        padding-right: $grid-gutter-width-base / 2;
-    }
-
-    @include media-breakpoint-up(sm) {
-        .page-main {
-            border: 1px solid rgba(#000, 0.2);
-            border-top-width: 0;
-            border-bottom-width: 0;
-
-            .container {
-                padding-left: $grid-gutter-width-base;
-                padding-right: $grid-gutter-width-base;
-            }
-        }
-    }
-}
 
 
 .page-title {
@@ -139,7 +85,6 @@ header {
 }
 
 .text-body {
-    // TODO: (mc) > (mh) Apply to all elems with long text/description (news, blogs, forum etc.)
     font-size: $lead-font-size;
 }
 
@@ -175,27 +120,6 @@ header {
         color: $gray-light;
         margin-left: 1.5rem;
         margin-right: 1.5rem;
-    }
-}
-
-
-#scroll-top {
-    z-index: 9999;
-    position: fixed;
-    bottom: 80px;
-    right: 0;
-    width: 36px;
-    height: 36px;
-    border-radius: 3px 0 0 3px;
-    border: 1px solid rgba(0,0,0, 0.15);
-    border-right-width: 0;
-    background: rgba(255,255,255, 0.9);
-    color: $body-color !important;
-    text-decoration: none;
-    transform: translate3d(100%, 0, 0);
-    transition: transform .2s ease-in-out;
-    &.in {
-        transform: translate3d(0, 0, 0);
     }
 }
 
