Admin: fixed date picker control display problem

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1785,3 +1785,11 @@ table.payment-method-features td {
   min-width: 1.5rem;
   .choice-box-img { max-width: ~"calc(1.5rem - 4px)"; }
 }
+
+
+
+/* Bootstrap 4 fixes 
+-------------------------------------------------------------- */
+.bootstrap-datetimepicker-widget th.switch {
+  display: table-cell;
+}
