--- a/src/Presentation/SmartStore.Web/Views/Blog/Partials/BlogTags.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/Partials/BlogTags.cshtml
@@ -4,16 +4,16 @@
 @if (Model.Tags.Count > 0)
 {
     <div class="block-popular-blogtags card">
-        <div class="card-header">
+        <h5 class="card-header">
             @T("Blog.TagCloud")
-        </div>
+        </h5>
         <div class="listbox card-block">
             <div class="tags fs-h4">
                 <ul class="list-inline">
                     @foreach (var item in Model.Tags)
                 {
                         <li class="list-inline-item">
-                            <a class="color-body" href="@Url.RouteUrl("BlogByTag", new { tag = item.Name })" style="font-size:@(Model.GetFontSize(item))%;">@item.Name</a>
+                            <a class="color-body" href="@Url.RouteUrl("BlogByTag", new { tag = item.SeName })" style="font-size:@(Model.GetFontSize(item))%;">@item.Name</a>
                         </li>
                     }
                 </ul>
