Moved blog navigation to the right

--- a/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/BlogPost.cshtml
@@ -8,7 +8,7 @@
     Html.AddMetaKeywordParts(Model.MetaKeywords);
 }
 
-@section left {
+@section right {
     @{
         Html.RenderAction("BlogMonths", "Blog");
         Html.RenderAction("BlogTags", "Blog");
