--- a/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Blog/List.cshtml
@@ -20,7 +20,7 @@
     );
 }
 
-@section left {
+@section right {
     @{
         Html.RenderAction("BlogMonths", "Blog");
         Html.RenderAction("BlogTags", "Blog");
@@ -70,36 +70,7 @@
             @foreach (var item in Model.BlogPosts)
             {
                 <article class="blogpost row mt-0">
-                    <div class="blogpost-info col-12 col-md-3">
-                        @if (item.Comments.AllowComments)
-                        {
-                            <a class="blogpost-comments@(item.Comments.NumberOfComments > 0 ? " vivid" : "") d-none d-lg-inline" 
-                                href="@Url.RouteUrl("BlogPost", new { SeName = item.SeName })" 
-                                title="@string.Format(@T("Blog.CommentsLink").Text, item.Comments.NumberOfComments)" 
-                                data-toggle="tooltip">
-								<span class="blogpost-comments-icon fa fa-comments"></span>
-                                <span class="blogpost-comments-count">@item.Comments.NumberOfComments</span>
-                            </a>
-                        }
-                        
-                        <div class="blogpost-date text-muted">
-                            @item.CreatedOn.ToString("dd MMMM, yyyy")
-                        </div>
-                        
-                        @if (item.Tags.Count > 0)
-                        {
-                            <div class="blogpost-tags mb-3 mb-md-0">
-                                <i class="fa fa-tags" title='@T("Blog.Tags")'></i>
-                                @for (int i = 0, length = item.Tags.Count; i < length; i++)
-                                {
-                                    var tag = item.Tags[i];
-                                    var isLast = i == length - 1;
-                                    <a class="blogpost-tag" href="@Url.RouteUrl("BlogByTag", new { tag = tag.SeName })">@tag.Name@(!isLast ? "," : "")</a>
-                                }
-                            </div>
-                        }
-                    </div>
-
+                    
                     <div class="blogpost-content col-12 col-md-9">
                         <h3 class="blogpost-title">
                             <a href="@Url.RouteUrl("BlogPost", new { SeName = item.SeName })">
@@ -112,6 +83,36 @@
                         </div>
 
                         @{ Html.RenderWidget("bloglist_page_inside_post"); }
+                    </div>
+
+                    <div class="blogpost-info col-12 col-md-3">
+                        @if (item.Comments.AllowComments)
+                        {
+                            <a class="blogpost-comments@(item.Comments.NumberOfComments > 0 ? " vivid" : "") d-none d-md-block"
+                               href="@Url.RouteUrl("BlogPost", new { SeName = item.SeName })"
+                               title="@string.Format(@T("Blog.CommentsLink").Text, item.Comments.NumberOfComments)"
+                               data-toggle="tooltip">
+                                <span class="blogpost-comments-icon fa fa-comments"></span>
+                                <span class="blogpost-comments-count">@item.Comments.NumberOfComments</span>
+                            </a>
+                        }
+
+                        <div class="blogpost-date mb-2 text-muted">
+                            @item.CreatedOn.ToString("dd MMMM, yyyy")
+                        </div>
+
+                        @if (item.Tags.Count > 0)
+                        {
+                            <div class="blogpost-tags mb-3 mb-md-0 p-2">
+                                <i class="fa fa-tags" title='@T("Blog.Tags")'></i>
+                                @for (int i = 0, length = item.Tags.Count; i < length; i++)
+                                {
+                                    var tag = item.Tags[i];
+                                    var isLast = i == length - 1;
+                                    <a class="blogpost-tag" href="@Url.RouteUrl("BlogByTag", new { tag = tag.SeName })">@tag.Name@(!isLast ? "," : "")</a>
+                                }
+                            </div>
+                        }
                     </div>
 
                 </article>
