--- a/src/Presentation/SmartStore.Web/Views/Boards/Partials/_SearchBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Boards/Partials/_SearchBox.cshtml
@@ -7,7 +7,10 @@
 
             <div class="input-group d-flex">
                 @Html.TextBox("searchterms", searchText, new { @class = "forum-search-box-text form-control", placeholder = searchText, onclick = String.Format("if(this.value=='{0}')this.value=''", searchText), onblur = String.Format("if(this.value=='')this.value='{0}';", searchText) })
-                <input type="submit" value="@T("Forum.SearchButton")" class="btn btn-primary input-group-addon" />
+                <span class="input-group-btn">
+                    <input type="submit" value="@T("Forum.SearchButton")" class="btn btn-primary" />
+                </span>
+                
             </div>
             <div class="advanced mt-2">
                 @Html.RouteLink(@T("Forum.AdvancedSearch").Text, "BoardSearch", new { adv = true }, new { title = @T("Forum.AdvancedSearch").Text })
