--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_variables.scss
@@ -206,9 +206,17 @@ $list-group-active-border:      $list-group-border-color;
 $list-group-link-color:         #636c72;
 $list-group-link-active-color:  $body-color;
 
-$alert-border-radius:           0;
-
-
 // Cards
 
 $card-deck-margin:              10px;
+
+$alert-border-radius:           0;
+
+
+// MH suggestions 
+$menubar-color:                 lighten($header-color, 8%);
+$menubar-inverse-color:         $header-inverse-color-muted !default;
+$shopbar-color:                 $header-color !default;
+$shopbar-inverse-color:         $header-inverse-color !default;
+$megamenu-color:                $header-color !default;
+$megamenu-inverse-color:        $header-inverse-color !default;
