Theming: fixed SASS validation in theme configurator

--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
@@ -3,7 +3,7 @@
 
 @{    
     ViewBag.Title = string.Format(T("Admin.Configuration.Themes.Title"), Model.ThemeName);
-	string parsingError = (string)TempData["LessParsingError"];
+	string parsingError = (string)TempData["SassParsingError"];
 }
 
 @using (Html.BeginForm())
@@ -57,9 +57,7 @@
 	{
 		<div style="margin-bottom: 20px">
 			<h4 class="text-error">@T("Admin.Configuration.Themes.Validation.ErrorReportTitle")</h4>
-			<pre>
-				@parsingError
-			</pre>
+			<pre>@parsingError</pre>
 			<a class="btn" href='@Url.Action("Configure", new { theme = Model.ThemeName, storeId = Model.StoreId })'>
 				@T("Admin.Configuration.Themes.Validation.RestorePrevValues")
 			</a>	
