--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -23,7 +23,7 @@
 @import 'shared/_mixins.scss'; 
 @import 'shared/_typo.scss';
 @import 'shared/_buttons.scss';
-@import 'shared/_cards.scss';
+@import 'shared/_card.scss';
 @import 'shared/_forms.scss';
 @import 'shared/_nav.scss';
 @import "shared/_modal-flex.scss"; 
