Theming: topic blocks css fix

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/theme.scss
@@ -123,6 +123,14 @@
     }
 }
 
+.page-body > .block:not(.block-boxed):first-child {
+    margin-top: 0 !important;
+
+    .block-title {
+        padding-top: 0;
+    }
+}
+
 
 
 .pagination {
