--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -11,12 +11,18 @@
     width: 18px;
     height: 18px;
     line-height: 16px;
+    vertical-align: middle;
     padding: 0;
 
     position: absolute;
     right: -5px;
     top: -9px;
 }
+
+.touchevents .label-cart-amount {
+    // fix 'too high' label placement on some mobile devices
+    line-height: 18px;
+} 
 
 
 // OffCanvas Cart
