--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -22,8 +22,8 @@
 
 	Html.AppendScriptParts(ResourceLocation.Head,
 		"~/Scripts/modernizr.js",
-		"~/Scripts/jquery-2.1.1.js",
-		"~/Scripts/jquery-migrate-1.2.1.js",
+		jsRoot + "jquery-3.2.1.js",
+		jsRoot + "jquery-migrate-3.0.0.js",
 		"~/Scripts/globalize/globalize.js");
 
 	Html.AddScriptParts(ResourceLocation.Head, true,
