Renamed ColorSquares > Boxes (model level)

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/_ProductAddAttributes.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/_ProductAddAttributes.cshtml
@@ -47,7 +47,7 @@
                         }
                         break;
                     case AttributeControlType.RadioList:
-                    case AttributeControlType.ColorSquares:
+                    case AttributeControlType.Boxes:
                         {
                             foreach (var pvaValue in attribute.Values)
                             {
