--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/CartItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/CartItems.cshtml
@@ -75,7 +75,7 @@
                             @Html.Raw(item.RecurringInfo)
                         </div>
                     }
-					@if (!Model.IsEditable && (item.IsDownload && item.HasUserAgreement) || (Model.DisplayEsdRevocationWaiverBox && item.IsEsd))
+					@if (!Model.IsEditable && ((item.IsDownload && item.HasUserAgreement) || (Model.DisplayEsdRevocationWaiverBox && item.IsEsd)))
 					{
 						<div class="alert alert-warning mb-0">
 							@if (item.IsDownload && item.HasUserAgreement)
