--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_cart.scss
@@ -142,7 +142,7 @@
     align-items: center;
     line-height: 1.1;
 
-    background-color: $brand-success;
+    background-color: $offcanvas-cart-footer;
     color: #fff;
     padding: 1rem;
 
