--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
@@ -2,7 +2,7 @@
 /// <reference path="bs4/scss/bootstrap.scss" />
 
 $pd-offer-bg:                   $gray-lightest;
-$pd-price-color:                $body-color;
+$pd-price-color:                $product-price-color;
 $pd-price-offer-color:          $brand-danger;
 $pd-line-height:                1.3;
 
