--- a/src/Presentation/SmartStore.Web/Views/Search/Partials/SearchBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/Partials/SearchBox.cshtml
@@ -1,6 +1,8 @@
 ﻿@using SmartStore.Web.Models.Catalog;
-
 @model SearchBoxModel
+@{
+    var labelStyle = GetThemeVariable<string>("search-button", "primary");
+}
 
 @using (Html.BeginRouteForm("Search", FormMethod.Get, new { @class = "instasearch-form" }))
 {
@@ -16,7 +18,7 @@
 			data-url="@Url.RouteUrl("InstantSearch")"
 			@(Model.InstantSearchEnabled ? Html.Raw(" autocomplete=\"off\"") : null) />
 
-	<button type="submit" class="btn btn-primary btn-icon instasearch-button" title="@T("Search")">
+	<button type="submit" class="btn btn-@labelStyle btn-icon instasearch-button" title="@T("Search")">
 		<i class="icm icm-magnifier instasearch-icon"></i>
 	</button>
 
